# stats-collect

./: .pylintrc  CHANGELOG.md  CONTRIBUTORS.md  LICENSE.md  README.md  pyproject.toml  setup.py  stats-collect  stc-agent  stc-agent-ipmi-helper  stc-agent-proc-interrupts-helper  stc-wl-cpu-freq-walk  stc-wl-cpu-wake-walk
.github/workflows/: ci-innersource.yml  ci-public.yml  mypy.yml  pylint.yml  pytest.yml  ruff.yml
debian/: changelog  control  copyright  manpages  rules  stats-collect.install
defs/statscollect/: acpower.yml  interrupts.yml  ipmi.yml  turbostat.yml
docs/: guide-install.md  guide-tests.md  stats-collect-deploy.rst  stats-collect-man.rst  stats-collect-report.rst  stats-collect-start.rst
docs/man/: stats-collect-deploy.md  stats-collect-report.md  stats-collect-start.md
docs/man1/: stats-collect-deploy.1  stats-collect-report.1  stats-collect-start.1  stats-collect.1
helpers/stc-agent/: Makefile  ipmi-helper  proc-interrupts-helper  stc-agent  stc-agent-ipmi-helper  stc-agent-proc-interrupts-helper
helpers/stc-wl-cpu-wake-walk/: Makefile  stc-wl-cpu-wake-walk
js/: .eslintrc.js  README.md  package-lock.json  package.json
js/src/: data-tab.js  (+5 more)
misc/: _Changelogmd.py  make_a_release.sh  prepare_changelog_md
rpm/: stats-collect.spec
statscollectlibs/: DFSummary.py  Runner.py  _Runner.py  _StatsConfig.py
statscollecttools/: InstallStatsCollect.py  ToolInfo.py  _Common.py  _HelpersCommon.py  _STCAgent.py  _STCAgentIPMIHelper.py  _STCAgentProcInterruptsHelper.py  _STCWLCPUFreqWalk.py  _STCWLCPUWakeWalk.py  _StatsCollect.py  _StatsCollectDeploy.py  _StatsCollectReport.py  _StatsCollectStart.py
statscollectwls/: _STCWLCPUFreqWalk.py  _STCWLCPUWakeWalk.py
tests/: _Common.py  _ForceSourceTree.py  common.py  conftest.py  test_logging_cmdl.py  test_module_InterruptsDFBuilder.py  test_module_InterruptsParser.py  test_report_command.py  test_stc_agent_tool.py
tools/: install-stats-collect
workloads/: stc-wl-cpu-freq-walk  stc-wl-cpu-wake-walk
(+485 files in other folders)
